# Copyright (c) 2020 Jan Haller. zlib/libpng license.

[package]
name = "js-sandbox"
version = "0.1.3"
description = "Execute JavaScript code from Rust in a secure sandbox, and transport data to/from JS plug-ins."
repository = "https://github.com/Bromeon/js-sandbox"
authors = ["Jan Haller <bromeon@gmail.com>"]
license = "Zlib"
edition = "2018"
readme = "ReadMe.md"

[dependencies]
deno_core = "0.62.0"
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["derive"] }
