# Copyright (c) 2020-2021 Jan Haller. zlib/libpng license.

[package]
name = "js-sandbox"
version = "0.1.6"
description = "Execute JavaScript code from Rust in a secure sandbox, and transport data to/from JS plug-ins."
repository = "https://github.com/Bromeon/js-sandbox"
authors = ["Jan Haller <bromeon@gmail.com>"]
license = "Zlib"
edition = "2018"
readme = "ReadMe.md"

[dependencies]
deno_core = "0.114.0"
serde_json = "1.0.75"
serde = { version = "1.0.133", features = ["derive"] }
