# Copyright (c) 2020-2022 js-sandbox contributors. Zlib license.

[package]
name = "js-sandbox-macros"
version = "0.1.6"
description = "Procedural macros for js-sandbox"
repository = "https://github.com/Bromeon/js-sandbox"
documentation = "https://docs.rs/crate/js-sandbox-macros"
authors = ["Jan Haller <bromeon@gmail.com>"]
license = "Zlib"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
#syn = { version = "1", features = ["full", "extra-traits", "visit", "visit-mut"] }
syn = "1"
quote = "1"
proc-macro2 = "1"