# Copyright (c) 2020-2023 js-sandbox contributors. Zlib license.

[package]
name = "js-sandbox-macros"
version = "0.2.0-rc.1"
description = "Procedural macros for js-sandbox"
repository = "https://github.com/Bromeon/js-sandbox"
documentation = "https://docs.rs/js-sandbox-macros/0.2.0-rc.1"
authors = ["Jan Haller <bromeon@gmail.com>"]
license = "Zlib"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"